Rydder i ytelsefordeling repo (#1990)